# aiidalab-app-cutter

./: .gitignore  .travis.yml  README.md  cookiecutter.json  ruff.toml
hooks/: post_gen_project.py
{{cookiecutter.repo_name}}/: .travis.yml  README.md  __init__.py  example.ipynb  metadata.json  mkdocs.yml  requirements.txt  setup.cfg  start.py
{{cookiecutter.repo_name}}/docs/: development.md  index.md  requirements.txt  tutorial.md
