[metadata]
name = {{cookiecutter.repo_name}}
version = {{cookiecutter.version}}
author = {{cookiecutter.author}}
author_email = {{cookiecutter.contact_email}}
description = {{cookiecutter.short_description}}
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aiidalab/aiidalab-hello-world
project_urls =
    Bug Tracker = https://github.com/aiidalab/aiidalab-hello-world/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    aiidalab>={{cookiecutter.aiidalab_min_version}}

[flake8]
# Adapted from: https://github.com/CasperWA/voila-optimade-client
ignore =
    E501  # Line length handled by black.
    W503  # Line break before binary operator, preferred formatting for black.
    E203  # Whitespace before ':', preferred formatting for black.
