[aiidalab]
title = {{cookiecutter.app_title}}

[metadata]
name = {{cookiecutter.repo_name}}
version = {{cookiecutter.version}}
author = {{cookiecutter.author}}
author_email = {{cookiecutter.contact_email}}
description = {{cookiecutter.short_description}}
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.repo_name}}
project_urls =
{%- if cookiecutter.logo_url %}
    Logo = {{cookiecutter.logo_url}}
{%- endif %}
{%- if cookiecutter.documentation_url %}
    Documentation = {{cookiecutter.documentation_url}}
{%- endif %}
{%- if cookiecutter.issue_tracker_url %}
    Bug Tracker = {{cookiecutter.issue_tracker_url}}
{%- endif %}
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Development Status :: 1 - Planning

[options]
packages = find:
python_requires = >=3.8
install_requires =
    aiidalab>={{cookiecutter.aiidalab_min_version}}

[flake8]
ignore =
    E501  # Line length handled by black.
    W503  # Line break before binary operator, preferred formatting for black.
    E203  # Whitespace before ':', preferred formatting for black.
